2008-10-15  Chris Morley

	* src/fingerprint.cpp: correct yesterdays commit which used
	the wrong size to reserve for the fingerprint vector.	
	
2008-10-15  Chris Morley

	* include/openbabel/obconversion.h, src/obconversion.cpp:
	New function for counting the number of molecules in an input file.
	Make option to force output at end more general (for sort).
	
	* include/openbabel/fingerprint.h, src/fingerprint.cpp:
	Add extra parameter to FastSearchIndexer constructor to
	allow vectors to be pre-sized.
	
	* src/formats/fastsearchformat.cpp(ReadChemObject): change the way
	the last result molecule is flagged (for sort).
	(WriteChemObject) Make index updating work with GUI by detecting
	a ofstream object rather than cout.
	Count number of molecules in input file, report it and use it
	to pre-size the fingerprint and seekposition vectors.
	
	* src/formats/smilesformat.cpp(SkipObjects): make compatible with
	previous interpretation changes. (Lines which start with non-SMILES
	character are ignored.)


2008-10-15  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldmmff94.cpp: Accept both forms for sulfon
	and nitro groups: N(=O)O, N(=O)=O, S(O)O, S(=O)(=O) are now all valid
	and typed correctly.

2008-10-11  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefielduff.cpp: Fix minor output bug reported by
	Tapani Kinnunen (Fixes: #2144142)

2008-10-11  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, src/forcefields/forcefieldmmff94.cpp: Remove
	redefinition of _logbuf[BUFF_SIZE+1] (This and Chris' previous commit 
	fixes: #2150390)

	* src/forcefield.cpp: Fix OBForceField::GetAtomTypes() and
	OBForceField::GetPartialCharges()

	* src/forcefield.cpp: Check OBForceField::_validSetup flas before
	doing anything that may cause a segfault. (Fixes: #2059299)

	* src/forcefields/forcefield*.h: Set _validSetup to false in
	constructor.

	* CMakeLists.txt, src/config.h.cmake: apply patch from Christian