@@ -1,3 +1,7 @@
+2008-10-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
+	* src/builder.cpp: fix bugs with linear molecules. (Fixes #2119034 & #2013814)
+
 2008-10-15  Chris Morley
 
 	* src/fingerprint.cpp: correct yesterdays commit which used
